--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,24 @@
 /* Universal Styles */
+@font-face {
+  font-family: 'Inter-Regular';
+  src: url('../fonts/static/Inter-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Inter-Bold';
+  src: url('../fonts/static/Inter-Bold.ttf');
+}
+
+@font-face {
+  font-family: 'Inter-ExtraBold';
+  src: url('../fonts/static/Inter-ExtraBold.ttf');
+}
+
 body {
   min-height: 100vh;
   position: relative;
   z-index: 1;
+  font-family: 'Inter-Regular', sans-serif;
 }
 
 #bg-overlay {
@@ -19,9 +35,20 @@ body {
   display: none !important;
 }
 
+#img-menu-open, #img-menu-close, .btn-cta {
+  cursor: pointer;
+}
+
+header {
+  padding: 1.5rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 #header-logo {
-  width: 64px;
-  height: 40px;
+  width: 48px;
+  height: auto;
 }
 
 #img-menu-open {
@@ -34,13 +61,6 @@ body {
   width: 32px;
   height: 31px;
   margin: 0 0 0 auto;
-}
-
-header {
-  padding: 1.5rem 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 nav {
@@ -60,4 +80,111 @@ nav {
 
 .list-menu > li {
   margin-bottom: 1rem;
+}
+
+main {
+  padding: 1rem;
+}
+
+h2 {
+  font-family: 'Inter-ExtraBold';
+  font-size: 2.5rem;
+}
+
+.div-hero > div {
+  margin: 1rem 0;
+  line-height: 1.5rem;
+}
+
+.btn-cta {
+  padding: .75rem 1.5rem;
+  font-size: 14px;
+  font-family: 'Inter-Bold';
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: .25rem;
+  background-color: hsl(5, 85%, 63%);
+}
+
+.div-new-articles {
+  margin: 3rem 0;
+  padding: 1.5rem 1rem;
+  background-color: hsl(240, 100%, 5%);
+}
+
+.div-new-articles > h3 {
+  font-family: 'Inter-Bold';
+  font-size: 1.75rem;
+  color: hsl(35, 77%, 62%);
+}
+
+.list-new-articles {
+  margin-top: 1.5rem;
+}
+
+.item-new-article {
+  color: hsl(36, 100%, 99%);
+  margin-bottom: 3rem;
+  position: relative;
+}
+
+.item-new-article::after {
+  content: '';
+  position: absolute;
+  bottom: -1.5rem;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: hsl(36, 100%, 99%);
+}
+
+.item-new-article:last-of-type {
+  margin-bottom: 0;
+}
+
+.item-new-article:last-of-type::after {
+  content: none;
+}
+
+.item-new-article > h4 {
+  font-size: 1.25rem;
+  font-family: 'Inter-Bold';
+  margin-bottom: .75rem;
+}
+
+.item-new-article > div {
+  line-height: 1.75rem;
+}
+
+.div-top-articles {
+  margin: 3rem 0;
+}
+
+.item-top-article {
+  display: flex;
+  margin-bottom: 2rem;
+}
+
+.img-top-article {
+  width: 100px;
+  height: auto;
+  margin-right: 1rem;
+}
+
+.item-top-article > div > span {
+  display: block;
+  margin-bottom: .75rem;
+  color: hsl(233, 8%, 79%);
+  font-size: 1.75rem;
+  font-family: 'Inter-Bold';
+}
+
+.item-top-article > div > h4 {
+  font-family: 'Inter-ExtraBold';
+  font-size: 1.25rem;
+  margin-bottom: .75rem;
+}
+
+.item-top-article > div > div {
+  line-height: 1.5rem;
 }
