--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -209,3 +209,135 @@ h2 {
 .item-top-article > div > div {
   line-height: 1.5rem;
 }
+
+@media (min-width: 576px) {
+  nav {
+    width: 30%;
+    left: 70%;
+  }
+}
+
+@media (min-width: 767px) {
+  nav {
+    position: initial;
+    left: initial;
+    top: initial;
+    z-index: initial;
+    padding: initial;
+    width: auto;
+  }
+
+  .list-menu {
+    margin-top: 0;
+    display: flex;
+  }
+
+  .list-menu > li {
+    margin: 0 0 0 1rem;
+  }
+
+  main {
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: repeat(3, auto);
+  }
+
+  #img-hero {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    content: url('../images/image-web-3-desktop.jpg');
+    margin-bottom: 0;
+  }
+
+  .div-hero {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+  }
+
+  .div-new-articles {
+    margin: 0;
+    grid-row: 1 / 3;
+    grid-column: 3 / 4;
+    margin-left: 1rem;
+  }
+
+  .div-top-articles {
+    grid-row: 3 / 4;
+    grid-column: 1 / 4;
+  }
+}
+
+@media (min-width: 922px) {
+  header {
+    padding: 3rem 4rem 3rem 4rem;
+  }
+
+  main {
+    padding: 0 4rem 1rem 4rem;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: auto auto 33%;
+  }
+
+  .div-hero {
+    margin-top: 1.5rem;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto min-content;
+    gap: 0 1rem;
+  }
+
+  .div-hero > h2 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    font-size: 3rem;
+  }
+
+  .div-hero > div {
+    margin: 0 0 1.5rem 0;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+
+  .div-hero > .btn-cta {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    width: fit-content;
+    height: fit-content;
+  }
+
+  .div-new-articles {
+    margin-left: 1.5rem;
+  }
+
+  .list-top-articles {
+    display: flex;
+    margin-right: 1.5rem;
+  }
+
+  .img-top-article {
+    width: 90px;
+    height: fit-content;
+  }
+}
+
+@media (min-width: 1400px) {
+  header {
+    padding: 3rem 9rem 3rem 9rem;
+  }
+
+  .list-menu > li {
+    margin: 0 0 0 1.5rem;
+  }
+
+  main {
+    padding: 0 9rem;
+  }
+
+  .item-top-article > div > span {
+    margin-bottom: .25rem;
+  }
+
+  .item-top-article > div > h4 {
+    margin-bottom: .25rem;
+  }
+}
