--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -311,7 +311,6 @@ h2 {
 
   .list-top-articles {
     display: flex;
-    margin-right: 1.5rem;
   }
 
   .img-top-article {
@@ -331,6 +330,19 @@ h2 {
 
   main {
     padding: 0 9rem;
+  }
+
+  .div-top-articles {
+    margin: 3rem 0 0 0;
+  }
+
+  .item-top-article {
+    margin-right: 1.5rem;
+    margin-bottom: 0;
+  }
+
+  .item-top-article:last-of-type {
+    margin-right: 0;
   }
 
   .item-top-article > div > span {
